# uvero-cli

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  create-release.yml  publish.yml
scripts/: release.sh
tests/: test_api.py  test_cli.py
uvero/: __init__.py  api.py  boards.py  cli.py  clipboard.py  config.py  config_cli.py  utils.py
uvero.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
