[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uvero"
version = "0.1.0"
description = "Uvero CLI – online clipboard from your terminal"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
    "pyperclip>=1.8.0",
    "rich>=13.0.0",
]

[project.scripts]
uv = "uvero.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["uvero*"]
