[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uvero"
version = "0.1.4"
description = "Uvero CLI – online clipboard from your terminal"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Uvero", email = "support@uvero.app" },
]
keywords = ["clipboard", "cli", "terminal", "online clipboard", "paste", "share"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Internet",
]
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
    "pyperclip>=1.8.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://uvero.app"
Repository = "https://github.com/sakethdevx/uvero-cli"
"Bug Tracker" = "https://github.com/sakethdevx/uvero-cli/issues"

[project.scripts]
uvero = "uvero.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["uvero*"]
