[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uvero"
version = "0.2.4"
description = "Uvero CLI – online clipboard from your terminal"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Uvero", email = "support@uvero.app" },
]
keywords = ["clipboard", "cli", "terminal", "online clipboard", "paste", "share"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Internet",
]
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
    "pyperclip>=1.8.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://uvero.app"
Repository = "https://github.com/sakethdevx/uvero-cli"
"Bug Tracker" = "https://github.com/sakethdevx/uvero-cli/issues"

[project.scripts]
uvero = "uvero.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["uvero*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
